--- a/app/public/wp-content/themes/cool-glamping/css/modules/hero-slider.css
+++ b/app/public/wp-content/themes/cool-glamping/css/modules/hero-slider.css
@@ -18,7 +18,7 @@
   &__slide {
     background-size: cover;
     width: 100%;
-    height: 300px;
+    height: 450px;
     background-repeat: no-repeat;
     @mixin atMedium {
       height: 800px;
